# AI_LABS

./: .gitignore  README.md  lab1.1.ipynb  lab1.2.ipynb  lab1.ipynb  lab2.1.ipynb  lab2.2.ipynb  lab2.ipynb  lab3.1.ipynb  lab3.2.ipynb  lab3.ipynb  lab4.1.ipynb  lab4.2.ipynb  lab4.ipynb  lab5.1.ipynb  lab5.2.ipynb  lab5.ipynb  pyproject.toml
